# Gaussian-Splatterer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  Config.h  FboRenderer.cpp  FboRenderer.h  Main.cpp  ModelSplats.cpp  ModelSplats.h  ModelSplatsDevice.cpp  ModelSplatsDevice.h  ModelSplatsHost.cpp  ModelSplatsHost.h  OpenGLIncludes.h  Project.cpp  Project.h  SplatFrame.cpp  SplatFrame.h  SplatPanelInput.cpp  SplatPanelInput.h  SplatPanelTools.cpp  SplatPanelTools.h  Trainer.cu  Trainer.cuh  TruthCameras.cpp  TruthCameras.h  Window.cpp  Window.h
src/rtx/: RtxDevice.cu  RtxDevice.cuh  RtxHost.cpp  RtxHost.h
src/ui/: UiDialogAbout.cpp  UiDialogAbout.h  UiFrame.cpp  UiFrame.h  UiPanelInput.cpp  UiPanelInput.h  UiPanelOutput.cpp  UiPanelOutput.h  UiPanelParams.cpp  UiPanelParams.h  UiPanelTools.cpp  UiPanelTools.h  UiPanelViewInput.cpp  UiPanelViewInput.h  UiPanelViewOutput.cpp  UiPanelViewOutput.h
src/ui/dialog/: UiDialogAbout.cpp  UiDialogAbout.h
src/ui/params/: UiPanelParamsDensify.cpp  UiPanelParamsDensify.h  UiPanelParamsLr.cpp  UiPanelParamsLr.h  UiPanelParamsOther.cpp  UiPanelParamsOther.h
src/ui/tools/: UiPanelToolsInput.cpp  UiPanelToolsInput.h  UiPanelToolsTrain.cpp  UiPanelToolsTrain.h  UiPanelToolsTruth.cpp  UiPanelToolsTruth.h  UiPanelToolsView.cpp  UiPanelToolsView.h
src/wx/: SplatApp.cpp  SplatApp.h  SplatFrame.cpp  SplatFrame.h
